# Student-Teacher-Management-System

./: .gitignore  CMakeLists.txt  CppCrudOperation.cpp  Members.txt  README.md  School.db  Schools.db  main.cpp  tester.cpp
Demo/: CppCrudOperation.cpp  CrudWithCppClass.cpp  example.db  run.cpp  test.db
STMS/: CreateTable.sql  School.db  query.sql  query1.sql
STMS/database/: query.sql
STMS/skin/: connection.cpp  read.cpp  test.cpp
STMS/utils/: Attendance.cpp  Attendance.hpp  DatabaseCrudOperation.h  GradePointAverage.cpp  GradePointAverage.hpp  Person.cpp  Person.h  Student.cpp  Student.h  StudentCrudOperation.cpp  StudentCrudOperation.h  Teacher.cpp  Teacher.h  TeacherCrudOperation.cpp  TeacherCrudOperation.h  User.cpp  User.h  UserCrudOperation.cpp  UserCrudOperation.h  authenticateUser.cpp  delete.cpp  handleOperation.cpp  insert.cpp  main.cpp  target.txt  tester.cpp
SampleExercise/: GPA.cpp  update.cpp  users.cpp
SampleExercise/source/: School.db
source/: mani.cpp
